# chat-quickstart

./: .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.alt  Makefile  README.md  app.py  client_example.py  docker-compose.alt.yml  docker-compose.yml  langgraph.json  practical_sequential_graph.py  pyproject.toml  sequential_graph_example.py
agent/: memory_assistant.py  storage_assistant.py  swarm_assistant.py  ui_assistant.py
agent/tools/: arithmetic.py  storage.py
agents/basic/: basic_agent.py
agents/helloworld/: README.md  helloworld_agent.py  tools.py
agents/memory/: README.md  memory_agent.py
agents/multiagent/: README.md  multi_agent.py
agents/storage/: README.md  storage_agent.py  tools.py
clients/: client.py  http_client.py
