[project]
name = "simple-chatbot"
version = "1.0.0"
description = "A simple chatbot using LangGraph"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "langchain-community>=0.3.19",
    "langchain-openai>=0.3.9",
    "langchain>=0.3.20",
    "langgraph>=0.3.0",
    "pydantic>=2.5.0",
    "langgraph-swarm>=0.0.7",
]

[project.optional-dependencies]
dev = [
    "langgraph-cli[inmem]>=0.1.77",
    "mypy>=1.0.0",
    "pre-commit>=3.3.2",
    "pylint>=3.0.0",
    "requests>=2.31.0",
    "ruff>=0.0.270",
    "types-requests>=2.31.0",
]

# ----------------------
# Ruff Configuration
# ----------------------
[tool.ruff]
# Enable common linting rules
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ARG002", # unused argument, handled by pylint
    "ANN204", # we don't need to specify a type for the return value of __init__
    "TRY003", # ok to specify a string in a error message
    "EM101", # ok to specify a string in a error message
    "EM102", # ok to have f string when raising an error message
    "T201", # print is ok sometimes
    "PL",  # pylint handles this
    "D", # pydoc handled by pylint
    "FIX002", # ok to have TODO in code
    "TD002", # todo doesn't have to have a link
    "TD003", # todo doesn't have to have an author
    "RET504", # sometimes we want to define a variable and then return it for readability
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".uv",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Enabling incremental mode to speed up checking
[tool.mypy]
incremental = true
cache_dir = ".mypy_cache"

# ----------------------
# Pylint Configuration
# ----------------------
[tool.pylint.master]
jobs = 4
ignore = [".git", ".uv", ".venv"]

[tool.pylint]
disable = [
    "import-error",
    "no-name-in-module",
    "missing-docstring",
    "line-too-long",
    "missing-function-docstring",
    "missing-class-docstring",
    "missing-module-docstring",
    "invalid-name",
    "fixme",
    "redefined-outer-name"
]

[tool.pylint.format]
max-line-length = 88
